# anchor4git

./: CODE_OF_CONDUCT.md  README.md  SECURITY.md  pyproject.toml
src/: __init__.py  __main__.py  consts.py  utils.py
src/cmds/: config.py  fetch.py  goto.py  info.py  init.py  save.py  upload.py
