[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""

[project]
name = "anchor4git"
version = "0.1.1"
description = "A minimal git client CLI for remote repositories."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "FSPL-1.0" }

authors = [
    { name = "Abhirup Hajra", email = "me@abhirup.co.in" },
]

maintainers = [
    { name = "Flint Studios", email = "contact@function0.qzz.io" },
]

keywords = ["anchor", "git", "workflow", "vcs", "anchor4git"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer>=0.16",
    "rich>=10.0.0"
]

[project.optional-dependencies]
dev = []
docs = []

[project.scripts]
anchor4git = "src:main"
a4g = "src:main"

[project.urls]
Homepage = "https://github.com/flint-studios/anchor4git"
Documentation = "https://github.com/flint-studios/anchor4git"
Repository = "https://github.com/flint-studios/anchor4git"
Issues = "https://github.com/flint-studios/anchor4git/issues"